[project]
name = "ss_exploration_unet"
version = "0.1.0"
description = "First steps in Unet"
authors = [
    {name = "King-Navi",email = "168604098+King-Navi@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry.dependencies]
matplotlib = "^3.10.5"
pandas = "^2.3.2"
